--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
 
 </table>
-<p>table don't finished!</p>
+<p>table isn't finished!</p>
 <img id="shrek"src="https://cdn.pixabay.com/photo/2015/04/14/17/08/alien-722415_960_720.jpg">
 
 
